--- a/index.html
+++ b/index.html
@@ -1605,8 +1605,20 @@
         <h1>PROJECTS</h1>
         <hr>
         <section>
+            <div id="latest_project">
+                <aside>
+                    <a href="assignments/js/SPA/POS system Using Bootstrap/index.html" target="_blank"><img alt="Logo" src="assets/portfolio/POS.jpg"></a>
+                </aside>
+                <aside>
+                    <h1><a href="assignments/js/SPA/POS system Using Bootstrap/index.html" target="_blank">POS <span style="color: red">System</span></a></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                        optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                        repellendus tenetur totam, velit?</p>
+                </aside>
+            </div>
+
             <div>
-                <aside id="latest_project">
+                <aside>
                     <a href="assignments/js/Calculator/Calculator.html" target="_blank"><img alt="Logo" src="assets/portfolio/cal.png"></a>
                 </aside>
                 <aside>
@@ -1616,23 +1628,13 @@
                         repellendus tenetur totam, velit?</p>
                 </aside>
             </div>
+
             <div>
                 <aside>
                     <a href="assignments/css/Animation/Case 04/case_04.html" target="_blank"><img src="assets/portfolio/Car Animation Project.gif" alt="Logo"></a>
                 </aside>
                 <aside>
                     <h1><a href="assignments/css/Animation/Case 04/case_04.html" target="_blank">Car <span style="color: red">Animation</span></a></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
-                        optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
-                        repellendus tenetur totam, velit?</p>
-                </aside>
-            </div>
-            <div>
-                <aside>
-                    <a href="assignments/css/Animation/Case 03/case_03.html" target="_blank"><img src="assets/portfolio/Slider Project.png" alt="Logo"></a>
-                </aside>
-                <aside>
-                    <h1><a href="assignments/css/Animation/Case 03/case_03.html" target="_blank">Image Slider <span style="color: red">Animations</span></a></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                         optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                         repellendus tenetur totam, velit?</p>
