potfolio update & assets

--- a/project.html
+++ b/project.html
@@ -225,6 +225,7 @@
                     repellendus tenetur totam, velit?</p>
             </aside>
         </div>
+
         <div>
             <aside>
                 <a href="assignments/css/Animation/Case 03/case_03.html" target="_blank"><img src="assets/portfolio/Slider Project.png" alt="Logo"></a>
@@ -239,10 +240,10 @@
 
         <div>
             <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/css/Transitions/case_02/Case 02.html" target="_blank"><img alt="Logo" src="assets/portfolio/Circle Transition.gif"></a>
             </aside>
             <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <h1><a href="assignments/css/Transitions/case_02/Case 02.html" target="_blank">Circle <span style="color: red">Transition</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
@@ -251,10 +252,10 @@
 
         <div>
             <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/css/Transitions/case_01/Case 01.html" target="_blank"><img alt="Logo" src="assets/portfolio/Transition - Navigation.gif"></a>
             </aside>
             <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <h1><a href="assignments/css/Transitions/case_01/Case 01.html" target="_blank">Navigation <span style="color: red">Transition</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
@@ -263,10 +264,10 @@
 
         <div>
             <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/css/Animation/Case 01/case_01.html" target="_blank"><img alt="Logo" src="assets/portfolio/Basic Rotation.gif"></a>
             </aside>
             <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <h1><a href="assignments/css/Animation/Case 01/case_01.html" target="_blank">Bacis Rotation <span style="color: red">Animation</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
