--- a/project.html
+++ b/project.html
@@ -276,10 +276,10 @@
 
         <div>
             <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/css/Basics/case_06/case_06.html" target="_blank"><img alt="Logo" src="assets/portfolio/Grid Case 06.jpg"></a>
             </aside>
             <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <h1><a href="assignments/css/Basics/case_06/case_06.html" target="_blank">Grid Layout <span style="color: red">Project 2</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
@@ -288,10 +288,10 @@
 
         <div>
             <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/css/Basics/case_05/case_05.html" target="_blank"><img alt="Logo" src="assets/portfolio/Grid Case 05.jpg"></a>
             </aside>
             <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <h1><a href="assignments/css/Basics/case_05/case_05.html" target="_blank">Grid Layout <span style="color: red">Project 1</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
@@ -300,10 +300,10 @@
 
         <div>
             <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/css/Basics/case_04/case_04.html" target="_blank"><img alt="Logo" src="assets/portfolio/Sticky position to design.gif"></a>
             </aside>
             <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <h1><a href="assignments/css/Basics/case_04/case_04.html" target="_blank">Sticky Position <span style="color: red">Design</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
@@ -312,27 +312,16 @@
 
         <div>
             <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/css/Basics/case_03/case_03.html" target="_blank"><img alt="Logo" src="assets/portfolio/Fixed position to design.gif"></a>
             </aside>
             <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <h1><a href="assignments/css/Basics/case_03/case_03.html" target="_blank">Fixed Position <span style="color: red">Design</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
             </aside>
         </div>
-
-        <div>
-            <aside>
-                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
-            </aside>
-            <aside>
-                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
-                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
-                    repellendus tenetur totam, velit?</p>
-            </aside>
-        </div>
+        
     </section>
 </main>
 
