add MVC architectural design pattern to POS

--- a/assignments/js/SPA/POS system Using Bootstrap/index.html
+++ b/assignments/js/SPA/POS system Using Bootstrap/index.html
@@ -613,161 +613,12 @@
 
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
-<script>
+<script src="db/DB.js"></script>
+<script src="controller/IndexController.js"></script>
+<script src="controller/CustomerController.js"></script>
+<script src="controller/ItemController.js"></script>
+<script src="controller/OrderController.js"></script>
 
-    $("#customerContent").css("display", "none");
-    $("#itemContent").css("display", "none");
-    $("#orderContent").css("display", "none");
-    $("#homeNav").css('background', '#e6f2ff');
-    $("#homeNav").css('border-radius', '8px');
-    $("#customerNav").css('border-radius', '8px');
-    $("#itemNav").css('border-radius', '8px');
-    $("#orderNav").css('border-radius', '8px');
-
-
-    $("#homeNav").click(function () {
-        $("#dashboardContent").css('display', 'block');
-        $("#customerContent").css('display', 'none');
-        $("#itemContent").css('display', 'none');
-        $("#orderContent").css('display', 'none');
-
-        $("#homeNav").css('background', '#e6f2ff');
-        $("#customerNav").css('background', '#f8f9fa');
-        $("#itemNav").css('background', '#f8f9fa');
-        $("#orderNav").css('background', '#f8f9fa');
-    });
-
-    $("#customerNav").click(function () {
-        $("#dashboardContent").css('display', 'none');
-        $("#customerContent").css('display', 'block');
-        $("#itemContent").css('display', 'none');
-        $("#orderContent").css('display', 'none');
-
-        $("#homeNav").css('background', '#f8f9fa');
-        $("#customerNav").css('background', '#e6f2ff');
-        $("#itemNav").css('background', '#f8f9fa');
-        $("#orderNav").css('background', '#f8f9fa');
-    });
-
-    $("#itemNav").click(function () {
-        $("#dashboardContent").css('display', 'none');
-        $("#customerContent").css('display', 'none');
-        $("#itemContent").css('display', 'block');
-        $("#orderContent").css('display', 'none');
-
-        $("#homeNav").css('background', '#f8f9fa');
-        $("#customerNav").css('background', '#f8f9fa');
-        $("#itemNav").css('background', '#e6f2ff');
-        $("#orderNav").css('background', '#f8f9fa');
-    });
-
-    $("#orderNav").click(function () {
-        $("#dashboardContent").css('display', 'none');
-        $("#customerContent").css('display', 'none');
-        $("#itemContent").css('display', 'none');
-        $("#orderContent").css('display', 'block');
-
-        $("#homeNav").css('background', '#f8f9fa');
-        $("#customerNav").css('background', '#f8f9fa');
-        $("#itemNav").css('background', '#f8f9fa');
-        $("#orderNav").css('background', '#e6f2ff');
-    });
-
-    // customer script
-
-    var customers = [];
-
-    function loadCustomerData() {
-        for (var i of customers) {
-            var row = "<tr><td>" + i.id + "</td><td>" + i.name + "</td><td>" + i.address + "</td><td>" + i.salary + "</td></tr>";
-        }
-
-        $('#customerTable').append(row);
-    }
-
-    $('#addCustomerButton').click(function () {
-
-        let customerID = $("#AddCustomerFormFile").val();
-        let customerName = $("#AddCustomerFormFileMultiple").val();
-        let customerAddress = $("#AddCustomerFormFileDisabled").val();
-        let customerSalary = $("#AddCustomerFormFileSm").val();
-
-        var customerObject = {
-            id: customerID,
-            name: customerName,
-            address: customerAddress,
-            salary: customerSalary
-        }
-
-        customers.push(customerObject);
-
-        loadCustomerData();
-
-    });
-
-    $('#getAllCustomerDetails').click(function () {
-        $('#customerTable').clear();
-        loadCustomerData();
-    });
-
-    // $('#customerSearchBtn').click(function () {
-    //     var customer = $('#DeleteCustomerFormFile').text();
-    //     console.log(customer);
-    //
-    //     for (var i of customers) {
-    //         if (i.id == customer){
-    //             console.log(i.id);
-    //             $('#DeleteCustomerFormFile').text(i.id);
-    //             $('#DeleteCustomerFormFileMultiple').text(i.name);
-    //             $('#DeleteCustomerFormFileDisabled').text(i.address);
-    //             $('#DeleteCustomerFormFileSm').text(i.salary);
-    //             console.log("hari");
-    //         }else {
-    //             continue;
-    //             console.log("waradi");
-    //         }
-    //     }
-    // });
-
-    // item script
-
-    var items = [];
-
-    function loadItemData() {
-        for (var i of items) {
-            var row = "<tr><td>" + i.id + "</td><td>" + i.name + "</td><td>" + i.qty + "</td><td>" + i.price + "</td></tr>";
-        }
-
-        $('#itemTable').append(row);
-    }
-
-    $('#addItemButton').click(function () {
-
-        let itemID = $("#AddItemFormFile").val();
-        let itemName = $("#AddItemFormFileMultiple").val();
-        let itemQty = $("#AddItemFormFileDisabled").val();
-        let itemPrice = $("#AddItemFormFileSm").val();
-
-
-        var itemObject = {
-            id: itemID,
-            name: itemName,
-            qty: itemQty,
-            price: itemPrice
-        }
-
-        items.push(itemObject);
-
-        loadItemData();
-
-    });
-
-    $('#getAllItemDetails').click(function () {
-        $('#itemTable').clear();
-        loadItemData();
-    });
-
-</script>
 
 </body>
 </html>
