--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Kavindu Thiwanka</title>
 
-<!--    <base href="localhost">-->
+    <!--    <base href="localhost">-->
     <meta name="description" content="This is my Portfolio">
     <meta name="author" content="Kavindu Thiwanka">
     <meta name="owner" content="Kavindu Thiwanka">
@@ -90,6 +90,46 @@
             text-decoration: none;
         }
 
+        .title{
+            position: relative;
+            color: #fff;
+        }
+
+        .rotate-words{
+            display: inline;
+        }
+
+        .rotate-words span{
+            width: max-content;
+            position: absolute;
+            background-color: #bb93fc;
+            padding-inline: 10px;
+            opacity: 0;
+            transform-origin: 10% 75%;
+            animation: rotateWords 12s
+            var(--d) linear infinite;
+        }
+
+        @keyframes rotateWords {
+            5%{
+                opacity: 1;
+            }
+            10%,
+            20%{
+                opacity: 1;
+                transform: rotate(3deg);
+            }
+
+            15%{
+                transform: rotate(-1deg);
+            }
+            25%{
+                opacity: 0;
+                transform: translateY(90px)
+                rotate(10deg);
+            }
+        }
+
 
         /*Main*/
         main {
@@ -127,7 +167,7 @@
 
         main > section:nth-child(1) > div:nth-child(3) {
             position: absolute;
-            top: 400px;
+            top: 415px;
             left: 70px;
         }
 
@@ -1525,7 +1565,13 @@
         <div>
             <h1>Hi,</h1>
             <h1>I'm Kavindu Thiwanka,</h1>
-            <h1>Full Stack Developer.</h1>
+            <h1 class="title">
+                <div class="rotate-words">
+                    <span style="--d: 0s">UI Designer</span>
+                    <span style="--d: 4s">UX Designer</span>
+                    <span style="--d: 8s">Web Developer</span>
+                </div>
+            </h1>
         </div>
         <div>
             <aside>
