POS Item Validation Update

--- a/assignments/js/SPA/POS system Using Bootstrap/index.html
+++ b/assignments/js/SPA/POS system Using Bootstrap/index.html
@@ -309,18 +309,22 @@
                     <div class="mb-3">
                         <label class="form-label" for="AddItemFormFile">Item ID</label>
                         <input class="form-control" id="AddItemFormFile" type="text">
+                        <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="AddItemFormFileMultiple">Item Name</label>
                         <input class="form-control" id="AddItemFormFileMultiple" multiple type="text">
+                        <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="AddItemFormFileDisabled">Item Price</label>
                         <input class="form-control" id="AddItemFormFileDisabled" type="text">
+                        <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="AddItemFormFileSm">Item Quantity</label>
                         <input class="form-control form-control-sm" id="AddItemFormFileSm" type="number">
+                        <span class="control-error"></span>
                     </div>
                 </section>
             </div>
@@ -347,18 +351,22 @@
                                     class="fa-solid fa-magnifying-glass"></i>
                             </button>
                         </div>
+                        <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="DeleteItemFormFileMultiple">Item Name</label>
                         <input class="form-control" id="DeleteItemFormFileMultiple" multiple type="text">
+                        <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="DeleteItemFormFileDisabled">Item Price</label>
                         <input class="form-control" id="DeleteItemFormFileDisabled" type="text">
+                        <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="DeleteItemFormFileSm">Item Quantity</label>
                         <input class="form-control form-control-sm" id="DeleteItemFormFileSm" type="number">
+                        <span class="control-error"></span>
                     </div>
                 </section>
             </div>
