--- a/project.html
+++ b/project.html
@@ -6,6 +6,7 @@
     <meta content="black" name="theme-color">
     <meta content="width=device-width initial-scale=1" name="viewport">
 
+    <link rel="icon" type="image/x-icon" href="assets/portfolio/kt.png">
     <link href="assets/css/normalize.css" rel="stylesheet">
     <link href="assets/css/fonts/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
